# Texnostrelka--prosrochennie-kolbaski

./: .env.example  .gitignore  README.md  pyproject.toml
bookverse/: __init__.py  __main__.py  config.py  embedding.py  ingest.py  main.py  models.py  qa.py  schemas.py  search_index.py  storage.py  text.py
demo_books/: family_epilogue.fb2  family_epilogue.txt  garage_story.txt
static/: app.css  app.js
static/legacy/: app.js  bridge.css  reader.css  reader.js
templates/: index.html  reader.html
tests/: conftest.py  test_api.py  test_search.py  test_text_processing.py
